--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.timekeep" >
+    package="com.example.timekeep">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TimeKeep" >
+        android:theme="@style/Theme.TimeKeep">
         <activity
             android:name=".CreateEvent"
             android:exported="false" />
@@ -16,14 +16,9 @@
             android:name=".TasksView"
             android:exported="false" />
         <activity
-            android:name=".NavigationView"
-            android:exported="false" />
-        <activity
-            android:name=".DailyView"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+            android:name=".HomeActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TimeKeep.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
